Fix paths DOM